overflow to prevent page breaks

--- a/css/style.css
+++ b/css/style.css
@@ -705,6 +705,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #news .box {
   cursor: pointer;
+  overflow: hidden;
 }
 #news .newsposts > div {
   display: flex;
